unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/litify_pm__Default_Matter_Task__c.object-meta.xml
<CustomObject>
    <label>Default Matter Task</label>
    <nameField>
        <label>Default Matter Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Matter Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>