unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/Concatfordataload__c.field-meta.xml
<CustomField>
    <fullName>Concatfordataload__c</fullName>
    <formula>CASESAFEID(litify_pm__Matter_Stage__r.Id)&amp;  Name</formula>
    <label>Concatfordataload</label>
    <type>Text</type>
</CustomField>