unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__days_until_due_after_open_date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__days_until_due_after_open_date__c</fullName>
    <label>Days Until Due After Open Date</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>