unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Default_Matter_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Matter_Task__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Matter Task</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>