unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>