unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>