unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Default_Matter_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Default_Matter_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to calculate the Due Date of a Default Matter Task based on the date another Default Matter Task is completed</description>
    <label>Due Date Default Matter Task</label>
    <referenceTo>litify_pm__Default_Matter_Task__c</referenceTo>
    <relationshipLabel>Default Matter Tasks</relationshipLabel>
    <relationshipName>Default_Matter_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>