unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Matter_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Matter_Date_Field__c</fullName>
    <description>name of matter field to compare</description>
    <label>Due Date Matter Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>