unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Matter_Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Matter_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Date Matter Stage</label>
    <referenceTo>litify_pm__Matter_Stage__c</referenceTo>
    <relationshipLabel>Default Matter Tasks (Due Date Matter Stage)</relationshipLabel>
    <relationshipName>Default_Matter_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>