unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Operator__c</fullName>
    <defaultValue>&quot;Days After&quot;</defaultValue>
    <label>Due Date Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Days After</fullName>
            </value>
            <value>
                <fullName>Days After</fullName>
            </value>
            <value>
                <fullName>Months After</fullName>
            </value>
            <value>
                <fullName>Years After</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Business Days Before</fullName>
            </value>
            <value>
                <fullName>Days before</fullName>
            </value>
            <value>
                <fullName>Months before</fullName>
            </value>
            <value>
                <fullName>Years before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>