unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Date Stage</label>
    <referenceTo>litify_pm__Matter_Stage_Activity__c</referenceTo>
    <relationshipLabel>Default Matter Tasks</relationshipLabel>
    <relationshipName>Default_Matter_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>