unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Type__c</fullName>
    <label>Due Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matter</fullName>
                <label>Matter Field</label>
            </value>
            <value>
                <fullName>Stage</fullName>
                <label>Stage Activation</label>
            </value>
            <value>
                <fullName>Task</fullName>
                <label>Task Completion</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>