unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Due_Date_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Due_Date_Value__c</fullName>
    <label>Due Date Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>