unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Duration__c</fullName>
    <inlineHelpText>Hours to complete activity</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>