unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Estimated_Expense_Cost__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Expense_Cost__c</fullName>
    <label>Estimated Expense Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>