unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Estimated_Time_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Time_Value__c</fullName>
    <inlineHelpText>The default hourly rate of the Matter Role multiplied by estimated duration.</inlineHelpText>
    <label>Estimated Time Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>