unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Matter_Stage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Stage__c</fullName>
    <label>Matter Stage</label>
    <referenceTo>litify_pm__Matter_Stage__c</referenceTo>
    <relationshipLabel>Default Matter Tasks</relationshipLabel>
    <relationshipName>ToDo_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>