unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Matter_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Team_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Team Role</label>
    <referenceTo>litify_pm__Matter_Team_Role__c</referenceTo>
    <relationshipName>ToDo_Items</relationshipName>
    <type>Lookup</type>
</CustomField>