unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__RepeatInterval__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__RepeatInterval__c</fullName>
    <label>Repeat Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>