unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__RepeatThisTask__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__RepeatThisTask__c</fullName>
    <label>Repeat This Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After due date</fullName>
            </value>
            <value>
                <fullName>After date completed</fullName>
            </value>
            <value>
                <fullName>(Task Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>