unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Task_Reminder_Is_Set__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Task_Reminder_Is_Set__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Reminder Is Set</label>
    <type>Checkbox</type>
</CustomField>