unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Task_Reminder_Operator__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Task_Reminder_Operator__c</fullName>
    <defaultValue>&quot;Days Before&quot;</defaultValue>
    <label>Task Reminder Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days Before</fullName>
            </value>
            <value>
                <fullName>Days After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>