unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_pm__Task_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Task_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Type</label>
    <referenceTo>litify_pm__Task_Type__c</referenceTo>
    <relationshipLabel>Default Matter Tasks</relationshipLabel>
    <relationshipName>ToDo_Items</relationshipName>
    <type>Lookup</type>
</CustomField>