unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/litify_tso_Matter_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Matter_Stage_Name__c</fullName>
    <description>Populated by a process and used to show Matter Stage Name as secondary field in search layout.</description>
    <label>Matter Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>