unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/Matter_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Matter_Plan_Name__c</fullName>
    <formula>litify_pm__Matter_Stage__r.litify_pm__Matter_Plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Plan Name</label>
    <type>Text</type>
</CustomField>