unpackaged/main/default/objects/litify_pm__Default_Matter_Task__c/fields/OldSFID__c.field-meta.xml
<CustomField>
    <fullName>OldSFID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>OldSFID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>